<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/top_layout"
    android:background="@drawable/aswers_mm_listitem"
    android:orientation="vertical"
    android:padding="@dimen/marging15" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:gravity="left"
        android:maxLines="2"
        android:text="@string/news_name"
        android:textColor="@color/welcome_textColor"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/marging5"
            android:layout_marginTop="@dimen/marging5"
            android:gravity="left"
            android:text="@string/category_name"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/textsize16" />

        <TextView
            android:id="@+id/tv_crtime"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/marging5"
            android:layout_marginLeft="@dimen/marging5"
            android:layout_marginTop="@dimen/marging5"
            android:gravity="left"
            android:text="@string/category_time"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/textsize16" />
    </LinearLayout>

    <TextView
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/news_msg"
        android:textColor="@color/grey"
        android:textSize="@dimen/textsize16" />

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/marging5"
        android:gravity="left"
        android:maxLines="3"
        android:text="@string/news_msg"
        android:textColor="@color/grey"
        android:textSize="@dimen/textsize16"
        android:visibility="gone" />

</LinearLayout>