<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register_bg"
    android:orientation="vertical"
    tools:context=".Information_Activity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/normal_height54"
        android:background="@color/light_blue" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="15dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:background="@drawable/image_back"
            android:clickable="true"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/ht_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/img_back"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/category_title"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize23" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_towap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/aswers_mm_listitem"
        android:orientation="vertical"
        android:padding="@dimen/marging15" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:maxLines="2"
            android:text="@string/news_name"
            android:textColor="@color/welcome_textColor"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="@dimen/marging5"
                android:layout_marginTop="@dimen/marging5"
                android:gravity="left"
                android:text="@string/category_name"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/textsize16" />

            <TextView
                android:id="@+id/tv_crtimr"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginBottom="@dimen/marging5"
                android:layout_marginLeft="@dimen/marging5"
                android:layout_marginTop="@dimen/marging5"
                android:gravity="left"
                android:text="@string/category_time"
                android:textColor="@color/light_blue"
                android:textSize="@dimen/textsize16" />
        </LinearLayout>

        <TextView
            android:id="@+id/category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/news_msg"
            android:textColor="@color/grey"
            android:textSize="@dimen/textsize16" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/marging5"
            android:gravity="left"
            android:maxLines="3"
            android:text="@string/news_msg"
            android:textColor="@color/grey"
            android:textSize="@dimen/textsize16"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/normal_height54"
        android:background="@color/background_grey"
        android:orientation="horizontal" >

        <EditText
            android:layout_width="200dp"
            android:layout_height="@dimen/normal_height54"
            android:layout_marginLeft="@dimen/marging20"
            android:background="#00000000"
            android:inputType="textNoSuggestions"
            android:text="请输入回复内容... ..."
            android:textColor="@color/white" />

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marging10"
            android:background="@drawable/send_btn"/>
    </LinearLayout>

</LinearLayout>