<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_towap"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marging15"
        android:background="@drawable/aswers_mm_listitem"
        android:orientation="vertical"
        android:padding="@dimen/marging10" >

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="left"
            android:maxLines="2"
            android:text="@string/news_name"
            android:textColor="@color/welcome_textColor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_crtimr"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/marging5"
            android:layout_marginBottom="@dimen/marging5"
            android:gravity="left"
            android:text="@string/news_time"
            android:textColor="@color/grey"
            android:textSize="@dimen/textsize15" />

        <ImageView
            android:id="@+id/news_img"
            android:layout_width="fill_parent"
            android:layout_height="120dp"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/marging5"
            android:gravity="left"
            android:maxLines="3"
            android:text="@string/news_msg"
            android:visibility="gone"
            android:textColor="@color/grey"
            android:textSize="@dimen/textsize16" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/marging10"
            android:background="@color/divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/normal_height42"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="阅读全文"
                android:textColor="@color/font_grey2"
                android:textSize="@dimen/textsize16" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:scaleType="fitEnd"
                android:src="@drawable/arrow_icon" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>